--- a/static/index.html
+++ b/static/index.html
@@ -1,12 +1,36 @@
 <!doctype html>
-<html>
-  <head>
-    <meta charset="utf-8"><title>AdMind</title>
-    <link rel="stylesheet" href="/static/style.css">
-  </head>
-  <body class="wrap">
-    <h1>AdMind is running 🎉</h1>
-    <p>If you can see this, routing is correct.</p>
-    <script src="/static/app.js"></script>
-  </body>
+<html lang="en">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>AdMind</title>
+  <link rel="stylesheet" href="/static/style.css" />
+</head>
+<body>
+  <header>
+    <h1>AdMind</h1>
+    <button id="refreshBtn">Rebuild recommendations</button>
+    <button id="seedBtn">Seed demo data</button>
+  </header>
+
+  <main>
+    <section>
+      <h2>Recommendations</h2>
+      <div id="recs"></div>
+    </section>
+
+    <section class="two-col">
+      <div>
+        <h3>Accounts</h3>
+        <div id="accounts"></div>
+      </div>
+      <div>
+        <h3>Campaigns</h3>
+        <div id="campaigns"></div>
+      </div>
+    </section>
+  </main>
+
+  <script src="/static/app.js"></script>
+</body>
 </html>
