--- a/static/index.html
+++ b/static/index.html
@@ -1,36 +1,39 @@
 <!doctype html>
-<html lang="en">
+<html>
 <head>
   <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>AdMind</title>
-  <link rel="stylesheet" href="/static/style.css" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <style>
+    body { font-family: Inter, Arial, sans-serif; margin: 40px; }
+    button { padding: 10px 16px; margin-right: 8px; }
+    pre { background:#f6f8fa; padding:16px; border-radius:8px; overflow:auto; }
+  </style>
 </head>
 <body>
-  <header>
-    <h1>AdMind</h1>
-    <button id="refreshBtn">Rebuild recommendations</button>
-    <button id="seedBtn">Seed demo data</button>
-  </header>
+  <h1>AdMind</h1>
+  <p>Status: <span id="status">checking…</span></p>
+  <div>
+    <button onclick="checkHealth()">Check Health</button>
+  </div>
+  <pre id="out"></pre>
 
-  <main>
-    <section>
-      <h2>Recommendations</h2>
-      <div id="recs"></div>
-    </section>
+<script>
+const API = ""; // same origin
 
-    <section class="two-col">
-      <div>
-        <h3>Accounts</h3>
-        <div id="accounts"></div>
-      </div>
-      <div>
-        <h3>Campaigns</h3>
-        <div id="campaigns"></div>
-      </div>
-    </section>
-  </main>
+async function checkHealth(){
+  const r = await fetch(`${API}/health`)
+    .then(r=>r.json())
+    .catch(e=>({error: e.toString()}));
+  document.getElementById('out').textContent = JSON.stringify(r, null, 2);
+}
 
-  <script src="/static/app.js"></script>
+(async ()=>{
+  const r = await fetch(`${API}/health`)
+    .then(r=>r.json())
+    .catch(e=>({error: e.toString()}));
+  document.getElementById('status').textContent = r.ok ? 'healthy' : (r.error || 'error');
+})();
+</script>
 </body>
 </html>
