Insights engine + 7-day playbook + professional insight cards

--- a/static/index.html
+++ b/static/index.html
@@ -48,8 +48,7 @@
     <div class="card"><canvas id="topChart" height="140"></canvas></div>
   </div>
 
-  <div class="section-title">Recommendations</div>
-  <div id="recs" class="card"></div>
+  <div class="section-title">Recommendations <button class="btn" onclick="generatePlaybook()">Generate 7-Day Plan</button></div><div id="recs"></div>
 
   <div class="section-title">Accounts</div>
   <div class="card"><table>
