Fix front-end: safe JS, expose handlers, cache-bust

--- a/static/index.html
+++ b/static/index.html
@@ -129,7 +129,7 @@
   <div id="toast" class="toast"></div>
 
   <script src="https://cdn.jsdelivr.net/npm/chart.js@4.4.1/dist/chart.umd.min.js" crossorigin="anonymous"></script>
-  <script src="/static/app.js"></script>
+  <script src="/static/app.js?v=1760552696"></script>
   <!-- v:force -->
 </body>
 </html>
